fix overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -126,7 +126,7 @@ img {
 }
 
 .height_650 {
-    height: 650px;
+    height: 670px;
 }
 
 /* final chat section */
